ops/manifests/base/app/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: frontendsecurityheaders
spec:
  headers:
    allowedHosts:
    - demo.reliably.com
    - demo.reliably.local:30080
    - demo.reliably.local:30443
    customResponseHeaders:
      Cache-Control: "no-transform"
      server: ""
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsSeconds: 315360000
    referrerPolicy: "no-referrer-when-downgrade"
    contentSecurityPolicy: "default-src 'self' demo.reliably.com demo.reliably.local; script-src 'self' 'unsafe-inline'; style-src 'unsafe-inline' https://cdn.jsdelivr.net"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: httpsredirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
