ops/manifests/base/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteboard-frontend
  labels:
    app: noteboard-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noteboard-frontend
  template:
    metadata:
      labels:
        app: noteboard-frontend
    spec:
      containers:
      - name: noteboard-frontend
        image: lawouach/noteboard-frontend-demo:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - name: http
          containerPort: 8000
        volumeMounts:
        - name: app-env
          mountPath: /home/svc/.env
          subPath: .env
          readOnly: true
      volumes:
      - name: app-env
        secret:
          secretName: noteboard-frontend-env
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteboard-api
  labels:
    app: noteboard-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noteboard-api
  template:
    metadata:
      labels:
        app: noteboard-api
    spec:
      containers:
      - name: noteboard-api
        image: lawouach/noteboard-api-demo:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - name: http
          containerPort: 8001
        volumeMounts:
        - name: api-env
          mountPath: /home/svc/.env
          subPath: .env
          readOnly: true
      volumes:
      - name: api-env
        secret:
          secretName: noteboard-api-env
