ops/manifests/base/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: noteboard-frontend
spec:
  type: ClusterIP
  selector:
    app: noteboard-frontend
  ports:
  - protocol: TCP
    name: http
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: noteboard-api
spec:
  type: ClusterIP
  selector:
    app: noteboard-api
  ports:
  - protocol: TCP
    name: http
    port: 8001
    targetPort: 8001
